add swagger tags
